# freer-simple

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  RELEASE.md  cabal.project  cabal.project.ci  changelog.md  freer-effects.cabal  freer-simple.cabal  freer.cabal  package.yaml  stack.ghc-8.4.yaml  stack.ghc-8.8.yaml  stack.yaml
.github/workflows/: build.yml
bench/: Core.hs
examples/src/: Capitalize.hs  Common.hs  Console.hs  Coroutine.hs  Cut.hs  Exception.hs  Fresh.hs  Main.hs  NonDet.hs  NonDetEff.hs  Reader.hs  State.hs  StateRW.hs  Teletype.hs  Trace.hs
src/Control/Monad/: Freer.hs
src/Control/Monad/Freer/: Coroutine.hs  Cut.hs  Error.hs  Exception.hs  Fresh.hs  Internal.hs  Interpretation.hs  NonDet.hs  Reader.hs  State.hs  StateRW.hs  TH.hs  Trace.hs  Writer.hs
src/Data/: FTCQueue.hs  OpenUnion.hs
src/Data/Open/: Union.hs
src/Data/Open/Union/: Internal.hs
src/Data/OpenUnion/: Internal.hs
tests/: Tests.hs  hlint.hs
tests/Tests/: Common.hs  Coroutine.hs  Exception.hs  Fresh.hs  Loop.hs  NonDet.hs  NonDetEff.hs  Reader.hs  State.hs  StateRW.hs  TH.hs
