name:                freer
version:             0.1.1.0
synopsis:            Implementation of the Freer Monad
-- description:
license:             BSD3
license-file:        LICENSE
author:              Alej Cabrera
maintainer:          cpp.cabrera@gmail.com
copyright:           Alej Cabrera 2015
category:            Control
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Freer.Internal
                     , Data.FTCQueue
                     , Data.Open.Union
                     , Control.Monad.Freer
                     , Control.Monad.Freer.Reader
                     , Control.Monad.Freer.Writer
                     , Control.Monad.Freer.State
                     , Control.Monad.Freer.StateRW
                     , Control.Monad.Freer.Exception
                     , Control.Monad.Freer.Trace
                     , Control.Monad.Freer.Fresh
  -- other-extensions:
  build-depends:       base >=4.7 && <4.9
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable examples
  main-is:             Main.hs
  other-modules:       Reader
                     , Exception
                     , Common
                     , State
                     , StateRW
                     , Trace
                     , Fresh
  build-depends:       base >=4.7 && <4.9
                     , freer
  hs-source-dirs:      examples/src
  ghc-options:         -Wall
  default-language:    Haskell2010
